Fix btn alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,7 +69,6 @@ body {
     font-size: 1.75rem;
     border: 1px solid #191919;
     align-self: center;
-    margin: 1rem;
     width: 100%;
     height: 5rem;
     padding: 1rem 0 0 0;
